@@ -5,6 +5,7 @@
   o add support to enable/disable PulseAudio
   o add support to enable/disable user switching
   o display trouble shooting when there's no driver too
+  o enable to reset the sound mixer to default values
 - cpufreq: fix gsx-suspmod probe
 - scannerdrake: fix to open usbtable.gz instead of usbtable
 
